Amended code block styling to fix overflow

--- a/src/components/CodeBlock.css
+++ b/src/components/CodeBlock.css
@@ -8,6 +8,8 @@
     background-color: transparent;
     overflow: initial;
     border-radius: 0.2em;
+    position: relative;
+    float: left;
 }
 
 .token {
